Rewrite of read.lift() and dataset cleaning.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-- data.frame output should be in "long" rather than "wide" format
+- data.frame output could be in "long" rather than "wide" format
 - export function toward common ITG file formats.
 - export to CLFD format.
+- LIFT : 4 fields to be included
